# semgrep-python-sdk

./: .gitignore  CHANGELOG.md  LICENSE  README.md  install.py  pyproject.toml  requirements.txt  setup.py  test_installation.py
examples/: async_example.py  basic_usage.py
semgrep_sdk/: __init__.py  cli.py  client.py  exceptions.py  models.py  utils.py
tests/: test_client.py
